--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -22,14 +22,16 @@
           = navbar_dropdown 'Stammdaten', active: controller_name.in?(%w(locations teachers categories users)) do
             li class=('active' if controller_name == 'catalogs')
               = link_to title_for_model(Catalog, with_icon: true), catalogs_url, tabindex: -1
+            li class=('active' if controller_name == 'categories')
+              = link_to title_for_model(Category, with_icon: true), categories_url, tabindex: -1
+            li role="separator" class="divider"
             li class=('active' if controller_name == 'locations')
               = link_to title_for_model(Location, with_icon: true), locations_url, tabindex: -1
             li class=('active' if controller_name == 'teachers')
               = link_to title_for_model(Teacher, with_icon: true), teachers_url, tabindex: -1
-            li class=('active' if controller_name == 'categories')
-              = link_to title_for_model(Category, with_icon: true), categories_url, tabindex: -1
             li class=('active' if controller_name == 'companies')
               = link_to title_for_model(Company, with_icon: true), companies_url, tabindex: -1
+            li role="separator" class="divider"
             li class=('active' if controller_name == 'users')
               = link_to title_for_model(User, with_icon: true), users_url, tabindex: -1
 
