--- a/app/views/seminars/calendar.html.slim
+++ b/app/views/seminars/calendar.html.slim
@@ -1,17 +1,12 @@
 = render 'seminars/index/header'
 
-section
-  .col-md-1
-    ul.nav.nav-pills.nav-stacked.years
-      - @years.each do |year, count|
-        - year = year.to_i
-        li class=('active' if @year == year) = link_to year, calendar_seminars_path(year: year)
-
-    ul.nav.nav-pills.nav-stacked.months
-      - I18n.t('date.abbr_month_names').each.with_index do |month, index|
+.row
+  .col-md-2
+    ul.nav.nav-pills.nav-stacked
+      - I18n.t('date.month_names').each.with_index do |month, index|
         - if index != 0
-          li class=('active' if @month == index) = link_to month, calendar_seminars_path(year: @year, month: index)
-  .col-md-11
+          li class=('active' if @month == index) = link_to month, calendar_seminars_path(month: index)
+  .col-md-10
     table.table.table-condensed.table-bordered
       thead
         tr
@@ -25,7 +20,7 @@ section
           th Sonntag
       tbody
         - grouped_events = @events.all.group_by {|ev| [ev.date.cweek, ev.date]}
-        - days = (@first_of_month..@first_of_month.end_of_month).to_a
+        - days = @days_of_month.to_a
         - days.group_by(&:cweek).each do |week, days|
           tr
             th = week
@@ -37,9 +32,3 @@ section
                     - events.each do |ev|
                       = link_to ev.seminar.number, ev.seminar, title: ev.seminar.title
                       br
-
-sass:
-  ul.months
-    margin: 2px 0 7px 20px
-    a
-      padding: 3px 8px
