--- a/app/views/seminars/canceled.html.slim
+++ b/app/views/seminars/canceled.html.slim
@@ -1,16 +1,3 @@
 = render 'seminars/index/header'
-
-section
-  .col-md-12
-    = render 'table', seminars: @seminars, header: false
-    .row: .col-md-12: .pull-right = paginate @seminars
-
-sass:
-  ul.categories
-    /*white-space: nowrap*/
-    overflow: hidden
-    ul
-      margin: 2px 0 7px 20px
-      a
-        padding: 3px 8px
-        font-size: small
+= render 'table', seminars: @seminars, header: false
+.pull-right = paginate @seminars
