--- a/app/views/seminars/category.html.slim
+++ b/app/views/seminars/category.html.slim
@@ -1,17 +1,17 @@
 = render 'seminars/index/header'
 
-section
+.row
   .col-md-3
     ul.nav.nav-pills.nav-stacked.categories
       - Category.cat_parents.order(:number).each do |category|
         - active = @category.in?(category.categories + [category])
         li class=('active' if active)
-          - label = "#{category.display_name} (#{category.all_seminars.count})"
+          - label = "#{category.display_name} (#{category.all_seminars.where(year: current_catalog.year).count})"
           = link_to label, category_seminars_url(category), title: label
           - if active
             ul.nav.nav-pills.nav-stacked
               - category.categories.order(:number).each do |sub_cat|
-                - label = "#{sub_cat.display_name} (#{sub_cat.seminars.count})"
+                - label = "#{sub_cat.display_name} (#{sub_cat.seminars.where(year: current_catalog.year).count})"
                 li class=('active' if @category == sub_cat)
                   = link_to label, category_seminars_url(sub_cat), title: label
 
