--- a/app/views/categories/_form.html.slim
+++ b/app/views/categories/_form.html.slim
@@ -6,15 +6,9 @@
         span.sr-only Close
       h4 = t('.error')
   section
-    .col-md-6
-      .form-inputs
-        = f.association :category
-    .col-md-1
-      .form-inputs
-        = f.input :number
-    .col-md-5
-      .form-inputs
-        = f.input :name
+    .col-md-6 = f.association :category
+    .col-md-1 = f.input :number
+    .col-md-5 = f.input :name
 
   section.action-buttons
     .col-md-12
