--- a/app/views/categories/index.html.slim
+++ b/app/views/categories/index.html.slim
@@ -1,7 +1,7 @@
 - page_title_for @categories
 .page-header
   .buttons = new_link new_category_path
-  h2 = title_for @categories, count: Category.count
+  h2 = title_for @categories, count: current_catalog.categories.count
 
 ul.list-group
   - @categories.each do |category|
