--- a/app/views/categories/_form.html.slim
+++ b/app/views/categories/_form.html.slim
@@ -1,5 +1,6 @@
 = simple_form_for(@category) do |f|
   = f.input :parent_id, as: :hidden
+  = f.input :year, as: :hidden
   - if @category.errors.any?
     .alert.alert-danger.alert-dismissable
       button.close type="button" data-dismiss="alert"
@@ -7,12 +8,11 @@
         span.sr-only Close
       h4 = t('.error')
   section
-    .col-md-3 = f.input :number
-    .col-md-9 = f.input :name
-  .row
     .col-md-3
-      = f.input :position, disabled: true
+      = f.input :number
       = f.input :year, disabled: true
+    .col-md-9
+      = f.input :name
   section.action-buttons
     .col-md-12
       .pull-right
