--- a/app/views/seminars/category.html.slim
+++ b/app/views/seminars/category.html.slim
@@ -1,20 +1,7 @@
 = render 'seminars/index/header'
 
 .row
-  .col-md-3
-    ul.nav.nav-pills.nav-stacked.categories
-      - current_catalog.categories.cat_parents.order(:number).each do |category|
-        - active = @category.in?(category.categories + [category])
-        li class=('active' if active)
-          - label = "#{category.display_name} (#{category.all_seminars.where(year: current_catalog.year).count})"
-          = link_to label, category_seminars_url(category), title: label
-          - if active
-            ul.nav.nav-pills.nav-stacked
-              - category.categories.order(:number).each do |sub_cat|
-                - label = "#{sub_cat.display_name} (#{sub_cat.seminars.where(year: current_catalog.year).count})"
-                li class=('active' if @category == sub_cat)
-                  = link_to label, category_seminars_url(sub_cat), title: label
-
+  .col-md-3 = render 'seminars/index/categories', categories: current_catalog.categories.includes(children: :children).roots
   .col-md-9
     = render 'table', seminars: @seminars, header: false
     .row: .col-md-12: .pull-right = paginate @seminars
