--- a/app/views/seminars/edit.html.slim
+++ b/app/views/seminars/edit.html.slim
@@ -1,5 +1,6 @@
-- page_title_for @seminar, :number
-.page-header
-  h2 = title_for @seminar, :number
+/- page_title_for @seminar, :number
+/.page-header
+/  h2 = title_for @seminar, :number
+= render 'seminars/show/header'
 
 = render 'form'
