--- a/app/views/seminars/show/_header.html.slim
+++ b/app/views/seminars/show/_header.html.slim
@@ -3,12 +3,9 @@
 
 ol.breadcrumb
   li = link_to Seminar.model_name.human(count: 2), seminars_url
-  - sub_cat = @seminar.categories.first
-  - if sub_cat
-    - parent = sub_cat.parent? ? sub_cat : sub_cat.category
-    li = link_to parent.name, seminars_url(category_id: parent.id)
-    - unless parent == sub_cat
-      li = link_to sub_cat.name, seminars_url(category_id: sub_cat.id)
+  - if (category = @seminar.categories.first)
+    - category.path.each do |cat|
+      li = link_to cat.name, seminars_url(category_id: cat.id)
   - if (module_parent)
     li = link_to module_parent.number, module_parent
 
