--- a/app/views/catalogs/_form.html.slim
+++ b/app/views/catalogs/_form.html.slim
@@ -6,9 +6,10 @@
       .form-inputs
         = f.input :title
         = f.input :year
+        = f.input :published
 
   section.action-buttons
     .col-md-12
       .pull-right
-        => link_to t(:cancel), 'javascript: window.history.back();', class: 'btn btn-default'
+        => link_to t(:cancel), catalogs_path, class: 'btn btn-default'
         = f.submit t(:save), class: 'btn btn-primary'
