--- a/app/views/seminars/index/_header.html.slim
+++ b/app/views/seminars/index/_header.html.slim
@@ -8,7 +8,11 @@
         - if @seminar.respond_to?(:total_count) && @seminars.total_count != count
           - title += " (#{@seminars.total_count})"
         = icon_for Seminar, text: title
-        .buttons = new_link new_seminar_path
+        .buttons
+          - if Catalog.where('year < ?', current_year).exists?
+            = link_to search_seminars_path, class: 'btn btn-default' do
+              = fa_icon('plus', text: 'Aus Vorjahr kopieren')
+          = new_link new_seminar_path
 
 ul.nav.nav-tabs.seminar-views
   li class=('active' if params[:action] == 'category') = link_to 'nach Themen', category_seminars_path
