--- a/app/views/catalogs/index.html.slim
+++ b/app/views/catalogs/index.html.slim
@@ -12,6 +12,7 @@
         th = Catalog.human_attribute_name(:year)
         th = Catalog.human_attribute_name(:seminars)
         th = Catalog.human_attribute_name(:categories)
+        th
     tbody
       - @catalogs.each do |catalog|
         tr data = {url: url_for(catalog)} class = (catalog.published ? 'success' : 'warning')
@@ -20,3 +21,4 @@
           td = catalog.year
           td = catalog.seminars.count
           td = catalog.categories.count
+          td = link_to fa_icon('table', text: 'Exportieren'), [catalog, format: :xlsx], class: 'btn btn-default btn-xs'
