reset password option

--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -8,18 +8,26 @@
 
   section
     .col-md-4
-      .form-inputs
-        = f.input :name
-        = f.input :email
-        = f.input :role, collection: roles_select_options, include_blank: false
+      = f.input :name
+      = f.input :email
+      = f.input :role, collection: roles_select_options, include_blank: false
     .col-md-4
-      .form-inputs
-        = f.input :username
-        = f.input :password, disabled: !@user.new_record?
-        = f.input :password_confirmation, disabled: !@user.new_record?
+      = f.input :username
+      = f.input :password,              disabled: !@user.new_record?
+      = f.input :password_confirmation, disabled: !@user.new_record?
+      - unless @user.new_record?
+        button.btn.btn-danger.enable-pw Ändern
+
 
   section.action-buttons
     .col-md-8
       .pull-right
         => link_to t(:cancel), 'javascript: window.history.back();', class: 'btn btn-default'
         = f.submit t(:save), class: 'btn btn-primary'
+
+coffee:
+  $ ->
+    $('.enable-pw').click (event) ->
+      event.preventDefault()
+      $('input[type=password]').removeAttr('disabled')
+      $('.enable-pw').remove()
