--- a/app/views/attendees/cancel.html.slim
+++ b/app/views/attendees/cancel.html.slim
@@ -53,11 +53,8 @@
           th = Seminar.human_attribute_name :number
           td= @seminar.number
         tr
-          th = Seminar.human_attribute_name :date
-          td = @seminar.dates.map { |date| ldate date }.join('; ').html_safe
-        tr
-          th = Seminar.human_attribute_name :time
-          td = @seminar.events.map(&:time).uniq.compact.join('; ').html_safe
+          th = Seminar.human_attribute_name :events
+          td = events_list(@seminar).join('; ').html_safe
         tr
           th = Teacher.model_name.human count: @seminar.teachers.count
           td = @seminar.teachers.map(&:name).join(', ').html_safe
