--- a/app/views/booking_mailer/booking_notification_email.text.erb
+++ b/app/views/booking_mailer/booking_notification_email.text.erb
@@ -2,8 +2,7 @@ Eine neue Anmeldung für ein Seminar liegt vor:
 
 <%= Seminar.model_name.human               %>: <%= @seminar.title %>
 <%= Seminar.human_attribute_name :number   %>: <%= @seminar.number %>
-<%= Seminar.human_attribute_name :date     %>: <%= @seminar.dates.map { |date| ldate date }.join('; ').html_safe %>
-<%= Seminar.human_attribute_name :time     %>: <%= @seminar.events.map(&:time).uniq.compact.join('; ').html_safe %>
+<%= Seminar.human_attribute_name :events   %>: <%= events_list(@seminar).join('; ').html_safe %>
 <%= Seminar.human_attribute_name :location %>: <%= @seminar.location.name %>
 <%= Seminar.human_attribute_name :price_text %>: <%= strip_tags(@seminar.price_text).html_safe %>
 <%= Attendee.model_name.human(count: @booking.attendees.count) %>: <%= @booking.attendees.map(&:name).join(', ').html_safe %>
