replace SeminarHelper by SeminarDecorator

--- a/app/views/attendees/_seminar.html.slim
+++ b/app/views/attendees/_seminar.html.slim
@@ -1,5 +1,5 @@
 label = Seminar.human_attribute_name :events
-p = events_list(@seminar).join('; ').html_safe
+p = @seminar.formatted_events.html_safe
 
 label Ort
 p = @seminar.location&.name
