--- a/app/views/booking_mailer/booking_confirmation_email.text.erb
+++ b/app/views/booking_mailer/booking_confirmation_email.text.erb
@@ -2,11 +2,7 @@ Sehr geehrte Damen und Herren,
 
 hiermit bedanken wir uns für Ihre Anmeldung und übersenden Ihnen noch einmal zur Kontrolle die eingegangenen Anmeldedaten. Eine Anmeldebestätigung und die Rechnung senden wir Ihnen ca. zwei Wochen vor dem Seminartermin an Ihre Rechnungsadresse zu.
 
-<%= Seminar.model_name.human               %>: <%= @seminar.title %>
-<%= Seminar.human_attribute_name :number   %>: <%= @seminar.number %>
-<%= Seminar.human_attribute_name :events   %>: <%= events_list(@seminar).join('; ').html_safe %>
-<%= Seminar.human_attribute_name :location %>: <%= @seminar.location.name %>
-<%= Seminar.human_attribute_name :price_text %>: <%= strip_tags(@seminar.price_text).html_safe %>
+<%= render 'seminar' %>
 <%= Attendee.model_name.human(count: @booking.attendees.count) %>: <%= @booking.attendees.map(&:name).join(', ').html_safe %>
 Kontakt: <%= @booking.contact_email %>, <%= @booking.contact_phone %>, <%= @booking.contact_fax %> (Fax), <%= @booking.contact_mobile %> (Mobil)
 
