--- a/app/views/booking_mailer/booking_confirmation_email.html.slim
+++ b/app/views/booking_mailer/booking_confirmation_email.html.slim
@@ -5,23 +5,9 @@ p
     die eingegangenen Anmeldedaten. Eine Anmeldebestätigung und die Rechnung senden wir
     Ihnen ca. zwei Wochen vor dem Seminartermin an Ihre Rechnungsadresse zu.
 
-table
-  tr
-    td: strong = Seminar.model_name.human
-    td = @seminar.title
-  tr
-    td: strong = Seminar.human_attribute_name :number
-    td= @seminar.number
-  tr
-    td: strong = Seminar.human_attribute_name :events
-    td = events_list(@seminar).join('; ').html_safe
-  tr
-    td: strong = Seminar.human_attribute_name :location
-    td = @seminar.location.name
-  tr
-    td: strong = Seminar.human_attribute_name :price_text
-    td #{@seminar.price_text.html_safe} <br><br>
+= render 'seminar'
 
+table
   tr.attendee
     td: strong = Attendee.model_name.human(count: @booking.attendees.count)
     td = @booking.attendees.map(&:name).join('<br>').html_safe
